<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f8f8"
    tools:context=".pay.AddWithDrawAccountActivity">

    <include
        layout="@layout/actionbar_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/rl_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_with_top_bottom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/ll_input_phone"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/alipay_account"
                android:textColor="#666666"
                android:textSize="14dp" />

            <com.component.widget.ClearEditText
                android:id="@+id/et_phone"
                style="@style/InputTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:hint="@string/input_hint_account"
                android:inputType="phone"
                android:maxLength="11"
                app:clearButtonDrawable="@drawable/clear_button"
                app:clearButtonMode="whileEditing" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            style="@style/horizontal_line"
            android:layout_below="@+id/ll_input_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/divider"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="@string/alipay_password"
                android:textColor="#666666"
                android:textSize="14dp" />

            <com.component.widget.ClearEditText
                android:id="@+id/et_pwd"
                style="@style/InputTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:hint="@string/input_hint_password"
                android:inputType="textPassword"
                android:maxLength="16"
                app:clearButtonDrawable="@drawable/clear_button"
                app:clearButtonMode="whileEditing" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_alipay_account"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_height"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_input" />


</android.support.constraint.ConstraintLayout>